--- a/lab_01/lab_01.html
+++ b/lab_01/lab_01.html
@@ -861,7 +861,7 @@ You can get the same output at any time by typing <code>cf app spring-music</cod
 </div>
 </div>
 <div class="paragraph">
-<p>Be sure to click on the ``information icon'' in the top right-hand corner of the UI.
+<p>Be sure to click on the &#8220;information icon&#8221; in the top right-hand corner of the UI.
 This gives you important information about the state of the currently running <em>Spring Music</em> instance, including what Spring Profiles are turned on and what Cloud Foundry services are bound.
 It will become important in the next lab!</p>
 </div>
@@ -873,7 +873,7 @@ It will become important in the next lab!</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-02-27 03:20:18 EST
+Last updated 2015-02-27 03:23:05 EST
 </div>
 </div>
 </body>
