fix missing square bracket

--- a/student_guide.html
+++ b/student_guide.html
@@ -761,7 +761,7 @@ Senior Project Manager - Pivotal<br>
 <p><a href="lab_04/lab_04.html">Lab 4 - Monitoring Applications</a></p>
 </li>
 <li>
-<p>link:lab_05/lab_05.html[Lab 5 - Pushing a Spring Cloud Microservices Architecture</p>
+<p><a href="lab_05/lab_05.html">Lab 5 - Pushing a Spring Cloud Microservices Architecture</a></p>
 </li>
 </ul>
 </div>
@@ -770,7 +770,7 @@ Senior Project Manager - Pivotal<br>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-02-27 03:25:22 EST
+Last updated 2015-02-27 08:23:18 EST
 </div>
 </div>
 </body>
